--- a/form.html
+++ b/form.html
@@ -30,7 +30,7 @@
         </div>
         <img id="ani" src="./images/rickshaw_8342944.png" alt="logo" />
         <div class="nav-content" id="nav-content">
-            <a class="nav-list" href="#">Home</a>
+            <a class="nav-list" href="./index.html">Home</a>
             <a class="nav-list" href="aboutus.html">About Us</a>
             <a class="nav-list" href="#">Services</a>
             <a class="nav-list" href="#">Products</a>
