--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
         </div>
         <div class="footer-bottom">
             <p>&copy; 2024 Aamcha Auto. All rights reserved.</p>
+            <p>Designed with ❤️ by Amit</p>
         </div>
     </footer>
 
