--- a/aboutus.html
+++ b/aboutus.html
@@ -75,7 +75,7 @@
             text-align: center;
             font-weight: bolder;
             font-size: 70px;
-              background-image: linear-gradient(45deg, rgb(94, 228, 16), rgb(19, 172, 11));
+              background-image: linear-gradient(45deg, rgb(83, 123, 60), rgb(227, 237, 227));
         }
 
         h2 {
@@ -385,10 +385,10 @@
     </section>
     <footer class="footer">
         <div class="footer-content">
-            <div class="footer-logo">
+            <div  class="footer-logo">
                 <img style="width: 220px;;" src="./images/Screenshot 2024-10-02 114044.png" alt="app-logo">
             </div>
-            <div class="footer-links">
+            <div style="margin-right: 50px;"class="footer-links">
                 <a class="footer-link" href="#">Privacy Policy</a>
                 <a class="footer-link" href="#">Terms of Service</a>
                 <a class="footer-link" href="#">Contact Us</a>
@@ -399,7 +399,7 @@
                 <a class="social-link" href="#"><img src="./images/instagram-icon.png" alt="Instagram"></a>
             </div>
         </div>
-        <div class="footer-bottom">
+        <div style="margin-left: 30px;" class="footer-bottom">
             <p>&copy; 2024 Aamcha Auto. All rights reserved.</p>
             <p>Designed with ❤️ by Amit</p>
         </div>
