--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
     <title>Aamcha Auto</title>
     <link rel="stylesheet" href="styles.css">
     <style>
@@ -39,14 +40,14 @@
             </div>
             <div class="download-buttons">
                 <div class="g-div">
-                    <a href="http://google.com">
+                    <a href="https://play.google.com/store/apps/details?id=com.eevv.riderApp">
                         <img src="./images/logo-1.png" alt="g-p-s">
                         <h2>Get the App</h2>
                         <p>From Google Play Store</p>
                     </a>
                 </div>
                 <div class="g-div">
-                    <a href="http://google.com">
+                    <a href="https://apps.apple.com/in/app/aamcha-auto-auto-booking-app/id6474066444">
                         <img src="./images/logo-2.png" alt="g-p-s">
                         <h2>Get the App</h2>
                         <p>From Google Play Store</p>
@@ -55,7 +56,7 @@
             </div>
         </div>
     </div>
-<div class="hero2">
+<div style="width: 100%;" class="hero2">
     <div  class="header-hero-2">
         <h1>Affordable rides for you, Better pay for drivers.</h1>
     </div>
@@ -81,9 +82,9 @@
     </div>
     <div class="happy-feed">
         <div class="buttons">
-            <a class="download-btn playstore" href="https://play.google.com/store/apps/details?id=your_app_id"
+            <a class="download-btn playstore" href="https://play.google.com/store/apps/details?id=com.eevv.riderApp&pli=1"
                 target="_blank">Download on Play Store</a>
-            <a class="download-btn applestore" href="https://apps.apple.com/us/app/your-app-id/id123456789"
+            <a class="download-btn applestore" href="https://apps.apple.com/in/app/aamcha-auto-auto-booking-app/id6474066444"
                 target="_blank">Download on Apple Store</a>
         </div>
         <div class="h-feed">
@@ -101,7 +102,7 @@
         via cutting the commission and decrease the hassle for the riders and make it pocket friendly for both of them.</p>
     </div>
     <div class="for-con">
-    <img style="width: 110%;" src="./images/auto.jpg" alt="">
+    <img style="width: 100%;" src="./images/auto.jpg" alt="">
     </div>
  </div>
 
@@ -110,7 +111,7 @@
         <div class="footer-logo">
             <img style="width: 220px;" src="./images/Screenshot 2024-10-02 114044.png" alt="app-logo">
         </div>
-        <div class="footer-links">
+        <div style="margin-right: 60px;"class="footer-links">
             <a class="footer-link" href="#">Privacy Policy</a>
             <a class="footer-link" href="#">Terms of Service</a>
             <a class="footer-link" href="#">Contact Us</a>
