corrected form nav

--- a/form.html
+++ b/form.html
@@ -38,11 +38,10 @@ background: linear-gradient(to right, #4CAF4F 0%, #7A8042 42%, #4CAF4F 100%);
         </div>
         <img id="ani" src="./images/rickshaw_8342944.png" alt="logo" />
         <div class="nav-content" id="nav-content">
-            <a class="nav-list" href="./index.html">Home</a>
+            <a class="nav-list" href="index.html">Home</a>
             <a class="nav-list" href="aboutus.html">About Us</a>
-            <a class="nav-list" href="#">Services</a>
-            <a class="nav-list" href="#">Products</a>
-            <a class="nav-list" href="./form.html">Contact Us</a>
+            <a class="nav-list" href="form.html">Contact</a>
+            <a style="background-color: #4caf4f; border-radius: 5px;" class="nav-list" href="#">Download the App</a>
         </div>
         <div class="hamburger" id="hamburger">
             <span></span>
